# awrk

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  semantic_uuid.rs
crates/datex/datex/: Cargo.toml
crates/datex/datex/src/: builder.rs  error.rs  lib.rs  text.rs  traits.rs
crates/datex/datex/src/codec/: decode.rs  encode.rs  mod.rs  tags.rs
crates/datex/datex/src/value/: mod.rs  owned.rs  value_ref.rs
crates/datex/datex/tests/: codec_array.rs  codec_decode_errors.rs  codec_decode_public_api.rs  codec_encode_errors.rs  codec_encode_into.rs  codec_encode_more.rs  codec_encode_roundtrip.rs  codec_scalars.rs  derive_enum.rs  derive_patch_struct.rs  derive_struct.rs  error_display.rs  null_unit.rs  traits_coverage.rs  traits_more.rs  traits_patch_primitives.rs  traits_wire_encode_decode.rs  value_builder.rs  value_ref_accessors.rs  value_ref_more.rs  vec_patch.rs
crates/datex/macros/: Cargo.toml
crates/datex/macros/src/: lib.rs
crates/datex/rpc/: Cargo.toml
crates/datex/rpc/src/: lib.rs  registry.rs
crates/datex/viz/: Cargo.toml
crates/datex/viz/src/: main.rs
crates/explorer-ui/: Cargo.toml
crates/explorer-ui/src/: app.rs  forms.rs  main.rs  model.rs  schema_types.rs  value_editor.rs  worker.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/schema/macros/: Cargo.toml
crates/schema/macros/src/: lib.rs
crates/schema/macros/tests/: wire_schema.rs
crates/schema/schema/: Cargo.toml
crates/schema/schema/src/: builder.rs  codec.rs  error.rs  ids.rs  lib.rs  owned_schema.rs  schema.rs  tests.rs
crates/win/api/: Cargo.toml
crates/win/api/src/: lib.rs
crates/win/process/: Cargo.toml
crates/win/process-bin/: Cargo.toml
crates/win/process-bin/src/: main.rs
crates/win/process/src/: lib.rs
crates/win/server/: Cargo.toml
crates/win/server/src/: main.rs
crates/win/shared/: Cargo.toml
crates/win/shared/src/: lib.rs
crates/world/: Cargo.toml
crates/world-ecs/: Cargo.toml
crates/world-ecs/src/: components.rs  engine.rs  lib.rs  scene.rs
crates/world/src/: lib.rs
crates/world/src/bridge/: mod.rs
crates/world/src/core/: changes.rs  mod.rs  process.rs  type_registry.rs
crates/world/src/registration/: mod.rs
crates/world/src/rpc/: api.rs  builtins.rs  client.rs  mod.rs
crates/world/src/transport/: listener.rs  mod.rs  session.rs
docs/: architecture-remediation-plan.md  process.md  proxy-outbound-creation-plan.md  remote-bridge-design.md  tasks.md
examples/example/: Cargo.toml
examples/example-consumer/: Cargo.toml
examples/example-consumer/src/: main.rs
examples/example-model/: Cargo.toml
examples/example-model/src/: lib.rs
examples/example-process/: Cargo.toml
examples/example-process-bin/: Cargo.toml
examples/example-process-bin/src/: main.rs
examples/example-process/src/: lib.rs
examples/example-server/: Cargo.toml
examples/example-server/src/: main.rs
examples/example/src/: lib.rs
