[package]
name = "awrk-world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
hecs = "0.11.0"
inventory = "0.3.22"
log = "0.4.29"
awrk-world-ecs = { path = "../world-ecs" }
awrk-macros = { path = "../macros" }
awrk-datex = { path = "../datex/datex" }
awrk-datex-rpc = { path = "../datex/rpc" }
awrk-datex-schema = { path = "../schema/schema" }
awrk-schema-macros = { path = "../schema/macros" }

