[package]
name = "awrk-win-process-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
mimalloc = "0.1"
winit = "0.30.0"
awrk-world-ecs = { path = "../../world-ecs" }
awrk-world = { path = "../../world" }
awrk-win = { path = "../shared" }
awrk-win-process = { path = "../process" }
